# dirigo-gui

./: README.md  pyproject.toml
dirigo_gui/: __init__.py  dirigo_gui.py  reference_gui.py
dirigo_gui/components/: acquisition_control.py  channel_control.py  channels.py  common.py  detector_control.py  display_control.py  laser_control.py  logger_control.py  stage_control.py  writer_control.py
dirigo_gui/widgets/: image_display.py
