[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo-gui"
version = "0.1.4"
description = "Dirigo reference GUI implementation"
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: System :: Hardware"
]
dependencies = [
    "dirigo",
    "customtkinter",
    "pillow"
]
urls = {"Homepage" = "https://github.com/dirigo-developers/dirigo-gui"}

[project.entry-points."dirigo_guis"]
reference = "dirigo_gui:ReferenceGUI"
